# earvane-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: run_ingestion.py
src/earvane/: config.py  formatting.py
src/earvane/agent/: graph.py  state.py
src/earvane/agent/nodes/: rag_retriever.py  relevance_scorer.py  reranker.py  signal_collector.py  synthesizer.py
src/earvane/ingestion/: deezer.py  genius.py  spotify.py  youtube.py
src/earvane/storage/: db.py  embed.py  queries.py  schema.sql
