[project]
name = "earvane-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.9",
    "openai>=2.48.0",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earvane"]
